--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
 :root {
   --sky-blue-color: rgb(115, 218, 255); 
   --dark-blue-color: rgb(67, 67, 102);
+  --grey-color: grey;
+  --grey-box-shadow: rgb(179, 175, 175);
 }
 
 body {
@@ -18,6 +20,54 @@ body {
   text-align: center;
 }
 
+.form {
+  width: 80%;
+  border: 2px solid grey;
+  margin: auto;
+  padding: 30px;
+  font-weight: 600;
+}
+
+/* Form */
+.form-div {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-div input {
+  border: none;
+  border-bottom: 1px solid grey;
+  padding: 8px 0 5px 0;
+  margin: 5px 0 5px 0;
+  outline: none;
+}
+
+.form-div input:focus {
+  border: 2px solid grey;
+  box-shadow: 1px 1px 1px var(--grey-box-shadow);
+  border-radius: 8px;
+}
+
+/* Button */
+.create-card {
+  padding: 15px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 600;
+  background-color: var(--grey-color);
+  border: 2px solid var(--grey-color);
+  color: white;
+  margin-left: 30%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.create-card:hover {
+  transition: 0.5s ease-in;
+  box-shadow: 0 0 10px var(--grey-box-shadow);
+  transform: scale(1.07);
+}
 
 /* Card proper */
 .card-container {
@@ -28,6 +78,17 @@ body {
   flex-direction: column;
   justify-content: space-evenly;
   padding: 0 15px 0 15px;
+  margin: auto;
+  background-image: url(/images/kadd-logo.png);
+  background-repeat: no-repeat;
+  background-position: bottom right;
+}
+
+.card-container::after {
+  content: " ";
+  z-index: 1000000;
+ 
+  opacity: 0.1;
 }
 
 .card-header {
@@ -46,7 +107,7 @@ body {
 }
 
 .card-header img {
-  width: 60px;
+  width: 80px;
 }
 
 .person-name {
@@ -54,8 +115,11 @@ body {
   font-size: 20px;
 }
 
-.person-name span {
+.job-title {
   font-size: 14px;
+  font-weight: bold;
+  text-transform: uppercase;
+  padding-bottom: 10px;
 }
 
 .phone-number,
@@ -64,6 +128,7 @@ body {
   display: flex;
   gap: 10px;
   padding-bottom: 5px;
+  font-size: 13px;
 }
 
 .phone-number i,
@@ -78,4 +143,8 @@ body {
 
 .address i {
   padding: 5px;
+}
+
+.display-none {
+  display: none;
 }
