--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
 :root {
   --sky-blue-color: rgb(115, 218, 255); 
   --dark-blue-color: rgb(67, 67, 102);
+  --card-sky-blue-color: rgb(115, 218, 255); 
+  --card-dark-blue-color: rgb(67, 67, 102);
   --grey-color: grey;
   --grey-box-shadow: rgb(179, 175, 175);
 }
@@ -18,6 +20,10 @@ body {
 
 .header {
   text-align: center;
+}
+
+.header:nth-child(1) {
+  padding: 10px 0 10px 0;
 }
 
 .form {
@@ -70,7 +76,7 @@ body {
   background-color: var(--grey-color);
   border: 2px solid var(--grey-color);
   color: white;
-  margin-left: 30%;
+  margin-left: 45%;
   margin-top: 20px;
   margin-bottom: 20px;
 }
@@ -83,7 +89,8 @@ body {
 }
 
 /* Red alert */
-.red-alert {
+.red-alert,
+.refresh-page {
   position: sticky;
   top: 50%;
   background-color: red;
@@ -95,11 +102,24 @@ body {
   font-size: 25px;
 }
 
+/* Color container */
+.color-container {
+ text-align: center;
+}
+
+#select-color {
+  cursor: pointer;
+  height: 30px;
+  margin: 20px;
+  width: 80px;
+  box-shadow:  0 0 10px var(--card-dark-blue-color);
+}
+
 /* Card proper */
 .card-container {
   width: 388px;
   height: 248px;
-  border: 2px solid var(--dark-blue-color);
+  border: 2px solid var(--card-dark-blue-color);
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -108,20 +128,18 @@ body {
   background-image: url(/images/kadd-logo.png);
   background-repeat: no-repeat;
   background-position: bottom right;
+  cursor: pointer;
 }
 
-.card-container::after {
-  content: " ";
-  z-index: 1000000;
- 
-  opacity: 0.1;
+.card-container:hover {
+  box-shadow: 0 0 10px var(--grey-box-shadow);
 }
 
 .card-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  text-transform: uppercase; 
+  text-transform: uppercase; ;
 }
 
 .company-name {
@@ -139,6 +157,7 @@ body {
 .person-name {
   text-transform: uppercase;
   font-size: 20px;
+  /* color: var(--card-sky-blue-color); */
 }
 
 .job-title {
@@ -146,6 +165,7 @@ body {
   font-weight: bold;
   text-transform: uppercase;
   padding-bottom: 10px;
+  color: var(--card-sky-blue-color);
 }
 
 .phone-number,
@@ -160,8 +180,8 @@ body {
 .phone-number i,
 .email-address i,
 .address i {
-  color: var(--sky-blue-color);
-  border: 1px solid var(--sky-blue-color);
+  color: var(--card-sky-blue-color);
+  border: 1px solid var(--card-sky-blue-color);
   padding: 3px;
   border-radius: 50%;
   font-size: 12px;
@@ -180,8 +200,14 @@ body {
     width: 80%;
   }
 
-  .red-alert {
+  .red-alert,
+  .refresh-page {
     width: 80%;
     font-size: 16px;
+  }
+
+.create-card,
+.create-another-card {
+  margin-left: 35%;
   }
 }
