--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
+
 * {
   padding: 0;
   margin: 0;
@@ -9,12 +11,12 @@
   --dark-blue-color: rgb(67, 67, 102);
   --card-sky-blue-color: rgb(115, 218, 255);
   --card-dark-blue-color: rgb(67, 67, 102);
-  --grey-color: rgb(121, 0, 0);
+  --grey-color: #696969;
   --grey-box-shadow: rgb(179, 175, 175);
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Lato", Helvetica, sans-serif;
   color: var(--dark-blue-color);
 }
 
