added the homepage for kadd

--- a/style.css
+++ b/style.css
@@ -13,21 +13,112 @@
   --card-dark-blue-color: rgb(67, 67, 102);
   --grey-color: #696969;
   --grey-box-shadow: rgb(179, 175, 175);
+  --darkest-blue: #001b48;
+  --dark-blue: #024571;
+  --light-blue: #06e9ee;
 }
 
 body {
   font-family: "Lato", Helvetica, sans-serif;
   color: var(--dark-blue-color);
+  font-size: 20px;
+  font-weight: 500px;
 }
 
+/* Header */
 .header {
   text-align: center;
+  padding: 10px 0;
+  margin-bottom: 20px;
 }
 
-.header:nth-child(1) {
-  padding: 10px 0 10px 0;
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 15vh;
+  padding: 0 40px;
+  box-shadow: 0 15px 10px -2px wheat;
 }
 
+.header img {
+  width: 120px;
+  cursor: pointer;
+  align-self: center;
+  z-index: -1;
+}
+
+.header-container .navbar {
+  display: flex;
+  gap: 20px;
+}
+
+.header-container .navbar li {
+  list-style: none;
+  padding: 10px;
+}
+
+.header-container .navbar a {
+  text-decoration: none;
+  color: var(--grey-color);
+}
+
+.header-container .navbar li:hover {
+  color: var(--darkest-blue);
+  transform: translateY(-1px);
+  transition: 0.5s ease;
+}
+
+.header-container .navbar li:last-of-type {
+  border: 2px solid var(--grey-box-shadow);
+  border-radius: 5px;
+}
+
+.header button {
+  padding: 15px;
+  margin: 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 600;
+  background-color: transparent;
+  border: 3px solid var(--grey-color);
+  color: var(--darkest-blue);
+}
+
+.header button:hover {
+  transform: scale(1.1);
+  transition: all 0.5s ease-in;
+}
+
+.showcase-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 90vh;
+}
+
+.showcase-container div:first-of-type {
+  flex: 1;
+  padding: 30px;
+  width: 80%;
+}
+
+.showcase-container h1 {
+  font-size: 40px;
+  padding-bottom: 10px;
+  color: var(--grey-color);
+}
+
+.showcase-image video {
+  width: 70%;
+  box-shadow: 0 24px 19px -2px whitesmoke;
+  -webkit-box-shadow: 22px -1px 43px 47px rgba(241, 244, 246, 0.26);
+  -moz-box-shadow: 22px -1px 43px 47px rgba(241, 244, 246, 0.26);
+  flex: 1;
+}
+
+/* Form */
 .form {
   width: 40%;
   border: 2px solid grey;
@@ -237,5 +328,58 @@ body {
   .refresh-page {
     width: 80%;
     font-size: 16px;
+  }
+}
+
+/* Media query */
+@media (max-width: 798px) {
+  body {
+    font-size: 15px;
+  }
+
+  /* Header */
+  .header-container {
+    height: 10vh;
+    box-shadow: 0 15px 10px -2px whitesmoke;
+  }
+
+  .header img {
+    width: 100px;
+  }
+
+  .header-container .navbar {
+    flex-direction: column;
+    gap: 5px;
+    background-color: white;
+    padding: 20px;
+    padding-top: 150px;
+    display: none;
+  }
+
+  .header-container .navbar li:hover {
+    transform: scale(1.02);
+    transition: 1s ease;
+  }
+
+  .showcase-container {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+  }
+
+  .showcase-container div:first-of-type {
+    flex: 1;
+    padding: 30px;
+    width: 100%;
+  }
+
+  .showcase-container h1 {
+    font-size: 25px;
+  }
+
+  .showcase-image video {
+    height: 100%;
   }
 }
