--- a/css/form.css
+++ b/css/form.css
@@ -20,7 +20,7 @@
 
 body {
   font-family: "Lato", Helvetica, sans-serif;
-  color: var(--dark-blue-color);
+  color: var(--darkest-blue);
   font-size: 20px;
   font-weight: 500px;
 }
@@ -109,7 +109,7 @@ body {
 
 .form-div input {
   border: none;
-  border-bottom: 1px solid grey;
+  border-bottom: 1px solid var(--darkest-blue);
   padding: 8px 0 5px 0;
   margin: 5px 0 5px 0;
   outline: none;
@@ -118,6 +118,7 @@ body {
 
 .form-div label {
   text-align: left;
+  color: var(--darkest-blue);
 }
 
 .form-div input:focus {
@@ -143,33 +144,35 @@ body {
   align-items: center;
 }
 
-.create-card,
-.create-another-card,
-.download-card {
+#create-card,
+#create-another-card-btn,
+#download-card-btn {
   padding: 15px;
   border-radius: 5px;
   cursor: pointer;
   font-size: 1rem;
   font-weight: 600;
-  background-color: var(--grey-color);
-  border: 2px solid var(--grey-color);
+  width: 40%;
+  background-color: var(--darkest-blue);
+  border: none;
   color: white;
   margin-top: 20px;
   margin-bottom: 20px;
 }
 
-.download-card,
-.create-another-card {
-  margin: 0;
-  /* margin-left: 20px; */
+#download-card-btn,
+#create-another-card-btn {
+  /* margin: 0; */
+  margin-left: 20px;
+  width: 180px;
 }
 
-.create-card:hover,
-.create-another-card:hover,
-.download-card:hover {
+#create-card:hover,
+#create-another-card-btn:hover,
+#download-card-btn:hover {
   transition: 0.5s ease-in;
-  box-shadow: 0 0 10px var(--grey-box-shadow);
-  transform: scale(1.07);
+  opacity: 0.7;
+  transform: scale(1);
 }
 
 .down-button {
@@ -364,5 +367,12 @@ body {
 
   .showcase-image video {
     height: 100%;
+  }
+
+  #create-card,
+  .create-another-card,
+  .download-card {
+    width: 80%;
+    border: none;
   }
 }
